(build): fix too large talk boxes

--- a/src/styles/_talks.less
+++ b/src/styles/_talks.less
@@ -10,7 +10,8 @@ a.talk-box,div.talk-box {
 	position: relative;
 	top: 0;
 	border: 1px solid #CCC;
-	padding-right: 15px
+	padding-right: 15px;
+	box-sizing: border-box;
 }
 
 a.talk-box,div.talk-box {
